# zds

./: .gitignore  CMakeLists.txt  README.md  generalSettings.cmake  toRelease  todo
executables/BMS/: BMSCore.hpp  BMSUtility.hpp  CMakeLists.txt  Device.hpp  Gateway.hpp  HDLGate.hpp  hdlDevices.hpp  localNetUDP.hpp  main.cpp  main2.cpp  protocolHDL.cpp  protocolHDL.hpp  sources.cmake
executables/Chat/: CMakeLists.txt  Chat.cpp  Chat.hpp  ChatUtility.hpp  DBTableScripts.sql  DSStructs.cpp  DSStructs.hpp  chatCHI.cpp  chatCHI.hpp  chatConfig.cpp  chatConfig.hpp  main.cpp  sources.cmake
executables/Chat/tests/: CMakeLists.txt  testChat.cpp  testDataType.cpp
executables/GUI/: CMakeLists.txt  DTStructs.hpp  FileSystem.cpp  FileSystem.hpp  GUIConfig.cpp  GUIConfig.hpp  GUICore.cpp  GUICore.hpp  GuiCHI.cpp  GuiCHI.hpp  GuiUtility.hpp  WebSocketPort.cpp  WebSocketPort.hpp  main.cpp  sources.cmake
executables/PGdatabase/: .cproject  .project  CMakeLists.txt  Connection.cpp  Connection.hpp  ConnectionManager.cpp  ConnectionManager.hpp  DBTablesScrips~  DTStructs.hpp  DTTablePostgres.cpp  DTTablePostgres.hpp  PGConfig.cpp  PGConfig.hpp  PGmediator.cpp  PGmediator.hpp  main.cpp  pgutility.cpp  pgutility.hpp  sources.cmake
executables/PGdatabase/tests/: CMakeLists.txt  PG_Con_Test.cpp
executables/UserManagement/: CMakeLists.txt  DBTableScripts.sql  DTStructs.hpp  UMConfig.cpp  UMConfig.hpp  UMCore.cpp  UMCore.hpp  UMSession.cpp  UMSession.hpp  UMSessionManager.cpp  UMSessionManager.hpp  UManagementUtility.cpp  UManagementUtility.hpp  UmCHI.cpp  UmCHI.hpp  _list.json  exceptions.hpp  main.cpp  sources.cmake  usergroupInfo.cpp  usergroupInfo.hpp
executables/_core/: CMakeLists.txt  CommunicationManager.cpp  CommunicationManager.hpp  CoreConfig.cpp  CoreConfig.hpp  ExtensionManager.hpp  Profiles.hpp  Router.cpp  Router.hpp  _list.json  coreutility.hpp  data.db3  exceptions.hpp  main.cpp  sources.cmake  todo.txt
executables/_core/tests/: routerTest.cpp
resource/Docs/: GUI Client Brief Description.docx  Nodes&DS Ref.ods  Nodes&DS Ref.xlsx  Service-States(yEd).graphml  Zeitoon GUI Service-Server Side technical.docx  Zeitoon Server Packet Samples.txt  Zeitoon Server Technical.docx  Zeitoon Server.docx  Zeitoon User Management Service.docx  note1
resource/cmakeRef/: CMakeLists.txt  generalSettings.cmake
resource/cmakeRef/executables/: CMakeLists.txt
resource/cmakeRef/executables/exe1/: CMakeLists.txt  main.cpp  sources.cmake  test.cpp  test.hpp
resource/cmakeRef/executables/exe1/tests/: CMakeLists.txt  testExe1.cpp
resource/cmakeRef/tests/testX/: CMakeLists.txt  main.cpp  sources.cmake  test.cpp  test.hpp
resource/subProjects/CodeGenerator/: formatter.py  main.py
resource/subProjects/CodeGenerator/templates/: exceptionClassTemplate  exceptionHeaderFileTemplate  exceptionMacroTemplate  exceptionMacroTemplateBKP.txt
resource/subProjects/CodeGenerator/test/executables/test2/: _list.json
resource/subProjects/GUI.NetTest/zdsGUI/: zdsGUI.sln
resource/subProjects/GUI.NetTest/zdsGUI/zdsGUI/: App.config  DTStructs.cs  Form1.Designer.cs  Form1.cs  Form1.resx  JsonParser.cs  Main.Designer.cs  Main.cs  Main.resx  Program.cs  login.Designer.cs  login.cs  login.resx  packages.config  wsConnection.cs  zdsGUI.csproj
resource/subProjects/GUI.NetTest/zdsGUI/zdsGUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings
tests/: CMakeLists.txt
tests/GUIWebTest/: CMakeLists.txt  main.cpp  sources.cmake
tests/GUIWebTest/web/: index.html  test.html
